--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-*m~
+*.m~
+*/*.m~
+
+*.aux
+*.bbl
+*.blg
+*.log
+*.nav
+*.out
+*.snm
+*.syntex.gz
+
+*/*.aux
+*/*.bbl
+*/*.blg
+*/*.log
+*/*.nav
+*/*.out
+*/*.snm
+*/*.syntex.gz
